--- a/s7/report-en/main.tex
+++ b/s7/report-en/main.tex
@@ -115,7 +115,7 @@
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
 %page de garde
-\input{Titre.tex}
+\input{Title.tex}
 
 %page blanche
 %\newpage
@@ -141,19 +141,19 @@
 \setcounter{page}{0}
 \newpage
 
-\input{Introduction.tex}
+\input{Intro.tex}
 
 \newpage
 
-\input{Modele.tex}
+\input{Model.tex}
 
 \newpage
 
-\input{Implementation.tex}
+\input{Implem.tex}
 
 \newpage
 
-\input{Conclusion.tex}
+\input{Conclu.tex}
 
 \newpage
 
